# RACR_AI

./: .Dockerfile.cuda.swp  .Dockerfile.no-cuda.swp  .bashrc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .open_gateway.sh.swp  .pre-commit-config.yaml  Dockerfile  Dockerfile.createBaseNoCuda  Dockerfile.dummy  Dockerfile.no-cuda  Dockerfile.observer  Dockerfile.participant  NOTES.md  README.md  alexnet_pytorch_split.py  app.py  build_client.sh  build_grpc.py  client_rpc_node.py  colab_vision.proto  colab_vision_client.py  colab_vision_server.py  config.yaml  deploy_node.sh  deploy_swarm.sh  docker-compose.yaml  dockerfile  entrypoint.sh  install.sh  make_reqs.ps1  model_client.py  model_remote.py  model_remote.py.old  model_test.py  model_test.yaml  model_test_1.py  model_wrapper.py  (+26 more)
AppData/: known_devices.yaml.example
Demo/: roles.py  start_demo.py
Dockerfiles/: Dockerfile.createBaseNoCuda
TestCases/: .gitignore
api/: build_grpc.py  config_manager.py  data_wrapper.py  exceptions.py  network.py  networking.py  setup_data.json
base_lib/: communication.py  dataset.py  metric_dict.py  node_service.py  runner.py  tasks.py
client/: grpc_testing_client.py
grpc/: build_client.sh  build_remote.sh  run_client_container.sh
local_testing/: docker-compose.yml
node_runner/: __init__.py  edge_runner.py  example_test_rpc_nodes.py  node_runner.py  observer_registry_runner.py  observer_rpc_node.py  participant_rpc_node.py  participant_runner.py  test_registry.py
observer_lib/: deploy.py  observer_service.py  test.py
onion/: testing.cache  training.cache
onodelib/: exceptions.py  lan.py  ssh.py  test.py
participant_lib/: base.py  data_retriever.py  dataloader.py  model.py  model_hooked.py  participant_service.py  partitioner.py  scheduler.py
pnodelib/: setup.py
protos/: colab_vision.proto
remote/: grpc_testing_remote.py
scripts/: .deploy_node.sh.swp  deploy_node.sh  open_gateway.sh
src/: colab_vision.py  colab_vision_client.py  (+2 more)
(+983 files in other folders)
